# agenticRAG

./: .gitignore  operations.py  pyproject.toml  requirements.txt
docs/examples/notebooks/: agent_simple_example.ipynb  ollama_test.ipynb
